// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"EmailQuickReply" match snapshot 1`] = `
Array [
  Object {
    "node": Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {},
      "type": [Function],
    },
    "path": "$",
    "type": "part",
    "value": Object {
      "content_type": "user_email",
    },
  },
]
`;

exports[`"LocationQuickReply" match snapshot 1`] = `
Array [
  Object {
    "node": Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {},
      "type": [Function],
    },
    "path": "$",
    "type": "part",
    "value": Object {
      "content_type": "location",
    },
  },
]
`;

exports[`"PhoneQuickReply" match snapshot 1`] = `
Array [
  Object {
    "node": Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {},
      "type": [Function],
    },
    "path": "$",
    "type": "part",
    "value": Object {
      "content_type": "user_phone_number",
    },
  },
]
`;

exports[`"QuickReply" match snapshot 1`] = `
Array [
  Object {
    "node": Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "payload": "🥧",
        "title": "i want a pie",
      },
      "type": [Function],
    },
    "path": "$",
    "type": "part",
    "value": Object {
      "content_type": "text",
      "image_url": undefined,
      "payload": "🥧",
      "title": "i want a pie",
    },
  },
]
`;

exports[`"QuickReply" match snapshot 2`] = `
Array [
  Object {
    "node": Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "imageURL": "http://cake.it",
        "payload": "🍰",
        "title": "a piece of cake",
      },
      "type": [Function],
    },
    "path": "$",
    "type": "part",
    "value": Object {
      "content_type": "text",
      "image_url": "http://cake.it",
      "payload": "🍰",
      "title": "a piece of cake",
    },
  },
]
`;
